--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">NUMAD22Fa_JiazheChen</string>
     <string name="about_me">About Me</string>
+    <string name="aboutme">Jiazhe Chen, chen.jiazhe@northeastern.edu</string>
+    <string name="aboutmeText">Jiazhe Chen, chen.jiazhe@northeastern.edu</string>
 </resources>
