--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="press_e">Pressed: E </string>
     <string name="press_f">Pressed: F </string>
     <string name="link_collector">LINK COLLECTOR</string>
+    <string name="submit">SUBMIT</string>
+    <string name="url_hint">URL (www.google.com)</string>
+    <string name="name_hint">Name (Google)</string>
 </resources>
